--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,7 @@
   },
   "icons": {
     "16": "src/assets/icon16.png",
+    "32": "src/assets/icon32.png",
     "48": "src/assets/icon48.png",
     "128": "src/assets/icon128.png"
   }
