feat: 新增灵译-AI翻译大师扩展基础功能
新增了灵译-AI翻译大师扩展的基础功能，包括：
1. 弹出窗口和设置页面的Vue组件
2. 翻译功能的背景脚本实现
3. 使用通义千问API进行流式翻译
4. 多轮对话翻译支持
5. 暗色模式适配

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "name": "lingyi-ai-translation",
   "description": "灵译-AI翻译大师：基于通义千问大模型的智能翻译工具",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "keywords": [
     "extension",
     "browser-extension",
@@ -19,8 +19,12 @@
     "start": "extension start",
     "build": "extension build"
   },
+  "dependencies": {
+    "vue": "^3.3.4"
+  },
   "devDependencies": {
-    "extension": "^2.0.0-rc.23"
+    "extension": "^2.0.0-rc.23",
+    "@vue/compiler-sfc": "^3.3.4"
   },
   "private": true,
   "author": {
