--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "author": "OSpoon",
   "permissions": ["storage", "clipboardRead", "clipboardWrite"],
   "action": {
-    "default_popup": "src/popup/popup.html",
+    "default_popup": "src/popup/index.html",
     "default_icon": {
       "16": "src/assets/icon16.png",
       "48": "src/assets/icon48.png",
@@ -15,10 +15,10 @@
     }
   },
   "background": {
-    "service_worker": "src/background/background.js"
+    "service_worker": "src/background/index.js"
   },
   "options_ui": {
-    "page": "src/options/options.html",
+    "page": "src/options/index.html",
     "open_in_tab": true
   },
   "icons": {
